--- a/.solved/tasks/src/2.Sushi/components/Menu/styles.css
+++ b/.solved/tasks/src/2.Sushi/components/Menu/styles.css
@@ -1,7 +1,12 @@
+.menuTableWrapper {
+  width: 960px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
 .menuTable {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
-  box-sizing: border-box;
+  margin: 0 -10px;
 }
