--- a/tasks/src/1.Sandglass/components/RoundButton/styles.css
+++ b/tasks/src/1.Sandglass/components/RoundButton/styles.css
@@ -1,14 +1,12 @@
 .button {
-  font-family: arial, sans-serif;
   user-select: none;
   display: inline-block;
   width: 40px;
   height: 40px;
   border-radius: 50%;
   font-size: 30px;
-  line-height: 40px;
   text-align: center;
-  margin: 0 10px 0 10px;
+  margin: 0 10px;
   background: #fff;
   color: #303030;
 }
