--- a/tasks/src/1.Sandglass/styles.css
+++ b/tasks/src/1.Sandglass/styles.css
@@ -1,13 +1,6 @@
-/* Styling it all now! */
-* {
-  font-family: arial, sans-serif;
-}
-
-html,
 body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+  font-family: arial, sans-serif;
+  line-height: 1.33;
   background: #b9b7b1;
   margin: 0;
 }
@@ -16,23 +9,4 @@ body {
   margin: auto;
   width: 400px;
   text-align: center;
-}
-
-.timer {
-  margin: 10px auto;
-  display: inline-block;
-}
-
-.timerDisplay {
-  display: inline-block;
-  width: 160px;
-  height: 80px;
-  border-radius: 40px;
-  font-size: 60px;
-  line-height: 80px;
-  text-align: center;
-  margin: 0 10px 0 10px;
-  background: #fff;
-  color: #303030;
-  font-weight: normal;
 }
