--- a/tasks/src/2.Sushi/components/Purchases/styles.css
+++ b/tasks/src/2.Sushi/components/Purchases/styles.css
@@ -1,10 +1,13 @@
+.purchasesWrapper {
+  width: 960px;
+  margin: 0 auto;
+}
 .purchases {
   background: #fff;
   box-shadow: 0 0 10px #E5E5E5;
-  width: 100%;
   padding: 20px;
+  margin: 0 -20px 20px;
   box-sizing: border-box;
-  margin-bottom: 20px;
 }
 
 .purchasesTotal {
