--- a/tasks/src/2.Sushi/styles.css
+++ b/tasks/src/2.Sushi/styles.css
@@ -1,17 +1,10 @@
-/* Styling it all now! */
-* {
-  font-family: arial, sans-serif;
-}
-
-html,
 body {
-  width: 100%;
-  height: 100%;
+  font-family: arial, sans-serif;
   background: #f2f2f2;
   margin: 0;
 }
 
-.app {
+.header {
   margin: auto;
   width: 960px;
 }
