--- a/tasks/src/2.Sushi/components/Purchases/styles.css
+++ b/tasks/src/2.Sushi/components/Purchases/styles.css
@@ -6,7 +6,7 @@
   background: #fff;
   box-shadow: 0 0 10px #E5E5E5;
   padding: 20px;
-  margin: 0 -20px 20px;
+  margin: 0 0 20px;
   box-sizing: border-box;
 }
 
