--- a/tasks/src/2.Sushi/features/products/Product/Product.css
+++ b/tasks/src/2.Sushi/features/products/Product/Product.css
@@ -1,65 +1,65 @@
 .product {
-  background: #fff;
-  width: 260px;
-  padding: 0 20px 20px 20px;
-  text-align: left;
-  box-shadow: 0 0 10px #E5E5E5;
-  margin: 10px;
+	background: #fff;
+	width: 260px;
+	padding: 0 20px 20px 20px;
+	text-align: left;
+	box-shadow: 0 0 10px #e5e5e5;
+	margin: 10px;
 }
 
 .product .image {
-  display: block;
-  margin: 10px auto;
-  width: 240px;
+	display: block;
+	margin: 10px auto;
+	width: 240px;
 }
 
 .product .title {
-  font-weight: bold;
-  font-size: 16px;
-  margin-bottom: 5px;
+	font-weight: bold;
+	font-size: 16px;
+	margin-bottom: 5px;
 }
 
 .product .description {
-  font-size: 12px;
-  color: #555;
-  height: 50px;
+	font-size: 12px;
+	color: #555;
+	height: 50px;
 }
 
 .product .buy {
-  margin-top: 20px;
+	margin-top: 20px;
 }
 
 .product .price {
-  display: inline-block;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 32px;
-  text-align: right;
+	display: inline-block;
+	font-weight: bold;
+	font-size: 20px;
+	line-height: 32px;
+	text-align: right;
 }
 
 .product .tags {
-  height: 24px;
+	height: 24px;
 }
 
 .product .tag {
-  display: inline-block;
-  background: #808080;
-  color: white;
-  padding: 5px;
-  margin: 0 5px;
-  width: 40px;
-  font-size: 12px;
-  text-align: center;
+	display: inline-block;
+	background: #808080;
+	color: white;
+	padding: 5px;
+	margin: 0 5px;
+	width: 40px;
+	font-size: 12px;
+	text-align: center;
 }
 
 .product .tag.red {
-  background: #D70C17;
+	background: #d70c17;
 }
 
 .product .tag.orange {
-  background: #F69C00;
+	background: #f69c00;
 }
 
 .product .tag.green {
-  background: #3F9726;
+	background: #3f9726;
 }
